[gd_scene load_steps=56 format=3 uid="uid://xogyxc4yjmii"]

[ext_resource type="PackedScene" uid="uid://b1qboeyt6528a" path="res://scenes/components/health_component/health_component.tscn" id="1_24cqq"]
[ext_resource type="Script" path="res://scenes/entities/enemies/cactus_knight/cactus_knight.gd" id="1_47wl3"]
[ext_resource type="PackedScene" uid="uid://c7t8vbrvflhqd" path="res://scenes/components/velocity_component/velocity_component.tscn" id="2_borqo"]
[ext_resource type="PackedScene" uid="uid://dmoxbd2k6knqn" path="res://scenes/components/hit_flash_component/hit_flash_component.tscn" id="3_wtii1"]
[ext_resource type="PackedScene" uid="uid://cpvfdb3a12pel" path="res://scenes/components/heart_drop_component/heart_drop_component.tscn" id="5_eoek3"]
[ext_resource type="PackedScene" uid="uid://bqp027bkxbbdq" path="res://scenes/components/death_component/death_component.tscn" id="6_2hqpj"]
[ext_resource type="PackedScene" uid="uid://ckfchym8oum5f" path="res://scenes/components/item_drop_component/item_drop_component.tscn" id="6_gfki3"]
[ext_resource type="PackedScene" uid="uid://6qdcjvv18u6n" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="6_qmdoe"]
[ext_resource type="Resource" uid="uid://cx780dwrclh03" path="res://resources/inventory_item/items/eremite_diskette.tres" id="7_haysb"]
[ext_resource type="PackedScene" uid="uid://k1on8wr4vmh3" path="res://scenes/components/stun_component/stun_component.tscn" id="8_mreo4"]
[ext_resource type="Script" path="res://scenes/entities/enemies/cactus_knight/states/cactus_knight_idle.gd" id="9_el4iu"]
[ext_resource type="Texture2D" uid="uid://busau1810mont" path="res://assets/april/april_shadow.png" id="9_jrfpc"]
[ext_resource type="PackedScene" uid="uid://bad0hk0t7q50h" path="res://scenes/components/hurtbox_component/hurtbox_component.tscn" id="9_p3ffu"]
[ext_resource type="PackedScene" uid="uid://txlnj5q7hlne" path="res://scripts/state_machine/state_machine.tscn" id="10_c5qg4"]
[ext_resource type="Script" path="res://scenes/entities/enemies/cactus_knight/states/cactus_knight_aggro.gd" id="10_d7o8x"]
[ext_resource type="Texture2D" uid="uid://67wshfayy4dh" path="res://assets/cactus_knight/portal_guardian.png" id="10_gevsb"]
[ext_resource type="Script" path="res://scenes/entities/enemies/states/spawn.gd" id="10_haauw"]
[ext_resource type="Script" path="res://scenes/entities/enemies/cactus_knight/states/cactus_knight_attack.gd" id="11_8yssa"]
[ext_resource type="Script" path="res://scenes/entities/enemies/cactus_knight/states/cactus_knight_shoot.gd" id="12_ygdi2"]
[ext_resource type="Script" path="res://scenes/entities/enemies/states/stun.gd" id="13_uojri"]

[sub_resource type="Animation" id="Animation_2j527"]
length = 3.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.7, 3, 3.3, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 18, 19, 18, 21, 23, 24, 21, 20, 18]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%StateMachine/Shoot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"instantiate_projectile_array"
}]
}

[sub_resource type="Animation" id="Animation_xfrbq"]
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 8, 8, 9, 9, 9, 10, 10, 11, 11, 12, 12, 12]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%StateMachine/Attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"instantiate_projectile_array_left"
}]
}

[sub_resource type="Animation" id="Animation_lnmff"]
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 13, 13, 14, 14, 14, 15, 15, 16, 16, 17, 17, 17]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%StateMachine/Attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"instantiate_projectile_array_right"
}]
}

[sub_resource type="Animation" id="Animation_2w6t8"]
length = 2.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_etogb"]
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b7y3o"]
_data = {
"attack_360": SubResource("Animation_2j527"),
"attack_left": SubResource("Animation_xfrbq"),
"attack_right": SubResource("Animation_lnmff"),
"idle": SubResource("Animation_2w6t8"),
"walk_down": SubResource("Animation_etogb")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fv273"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mifb4"]
animation = &"attack_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_wwhwu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fv273")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_mifb4")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_24mt8"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_6slrg"]
graph_offset = Vector2(-181, 111)
nodes/BlendSpace1D/node = SubResource("AnimationNodeBlendSpace1D_wwhwu")
nodes/BlendSpace1D/position = Vector2(0, 180)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_24mt8")
nodes/TimeScale/position = Vector2(240, 160)
nodes/output/position = Vector2(460, 160)
node_connections = [&"TimeScale", 0, &"BlendSpace1D", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r4yhf"]
animation = &"attack_360"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_3pvqt"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_axgt2"]
graph_offset = Vector2(-393, -17)
nodes/Animation/node = SubResource("AnimationNodeAnimation_r4yhf")
nodes/Animation/position = Vector2(-40, 160)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_3pvqt")
nodes/TimeScale/position = Vector2(200, 140)
nodes/output/position = Vector2(400, 140)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1umuv"]
animation = &"idle"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_4h37i"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ljoab"]
graph_offset = Vector2(-225, 125)
nodes/Animation/node = SubResource("AnimationNodeAnimation_1umuv")
nodes/Animation/position = Vector2(-20, 200)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_4h37i")
nodes/TimeScale/position = Vector2(200, 180)
nodes/output/position = Vector2(420, 180)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dbpdw"]
animation = &"walk_down"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_guqg2"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_kgq7c"]
graph_offset = Vector2(-384, -52)
nodes/Animation/node = SubResource("AnimationNodeAnimation_dbpdw")
nodes/Animation/position = Vector2(-100, 180)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_guqg2")
nodes/TimeScale/position = Vector2(140, 160)
nodes/output/position = Vector2(360, 160)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q47jy"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qred7"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ia3m2"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_svprk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8yvta"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e07v2"]
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a0mfa"]
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7fr4a"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q60ou"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mux4w"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q677i"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_btfhy"]
states/attack/node = SubResource("AnimationNodeBlendTree_6slrg")
states/attack/position = Vector2(497, 276)
states/attack_360/node = SubResource("AnimationNodeBlendTree_axgt2")
states/attack_360/position = Vector2(497, -60)
states/idle/node = SubResource("AnimationNodeBlendTree_ljoab")
states/idle/position = Vector2(355, 100)
states/move/node = SubResource("AnimationNodeBlendTree_kgq7c")
states/move/position = Vector2(649, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_q47jy"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_qred7"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_ia3m2"), "idle", "attack_360", SubResource("AnimationNodeStateMachineTransition_svprk"), "move", "attack_360", SubResource("AnimationNodeStateMachineTransition_8yvta"), "attack_360", "idle", SubResource("AnimationNodeStateMachineTransition_e07v2"), "attack_360", "move", SubResource("AnimationNodeStateMachineTransition_a0mfa"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_7fr4a"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_q60ou"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_mux4w"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_q677i")]
graph_offset = Vector2(11, -64)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nv5u1"]
radius = 11.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fdee1"]
radius = 12.0
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5o1rk"]
radius = 64.0

[node name="CactusKnight" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 5377
script = ExtResource("1_47wl3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_b7y3o")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath(".")
tree_root = SubResource("AnimationNodeStateMachine_btfhy")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/is_idle = false
parameters/conditions/is_moving = false
parameters/attack/BlendSpace1D/blend_position = 0.0
parameters/attack/TimeScale/scale = 1.0
parameters/attack_360/TimeScale/scale = 1.0
parameters/idle/TimeScale/scale = 1.0
parameters/move/TimeScale/scale = 1.0

[node name="HealthComponent" parent="." instance=ExtResource("1_24cqq")]
unique_name_in_owner = true
max_health = 200

[node name="VelocityComponent" parent="." instance=ExtResource("2_borqo")]
max_speed = 8
acceleration = 8.0

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("3_wtii1")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")

[node name="HeartDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_eoek3")]
drop_percent = 1.0
health_component = NodePath("../HealthComponent")

[node name="ItemDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_gfki3")]
health_component = NodePath("../HealthComponent")
item = ExtResource("7_haysb")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component", "stun_component") instance=ExtResource("9_p3ffu")]
unique_name_in_owner = true
visible = false
position = Vector2(0, -6)
health_component = NodePath("../HealthComponent")
stun_component = NodePath("../StunComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_nv5u1")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_2hqpj")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_fdee1")

[node name="AttackRangeArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_5o1rk")

[node name="HitboxComponent" parent="." instance=ExtResource("6_qmdoe")]
visible = false
collision_layer = 8
collision_mask = 64
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_fdee1")

[node name="ShadowSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(0, 1.49012e-07)
scale = Vector2(1.4375, 1.33333)
texture = ExtResource("9_jrfpc")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("10_gevsb")
offset = Vector2(-2, -30)
hframes = 5
vframes = 5
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/cactus_knight",
"o_name": "",
"only_visible": true,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/cactus_knight/portal_guardian.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"slice_section": true
}

[node name="StunComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("8_mreo4")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(0.499999, -20)
scale = Vector2(2, 2)
sprite = NodePath("../Sprite2D")

[node name="AttackCooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[node name="StateMachine" parent="." instance=ExtResource("10_c5qg4")]
unique_name_in_owner = true
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource("10_haauw")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("9_el4iu")

[node name="Aggro" type="Node" parent="StateMachine"]
script = ExtResource("10_d7o8x")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("11_8yssa")

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource("12_ygdi2")

[node name="Stun" type="Node" parent="StateMachine" node_paths=PackedStringArray("stun_component")]
script = ExtResource("13_uojri")
stun_component = NodePath("../../StunComponent")
